force-app/main/default/objects/HP_CaseOwner__c/HP_CaseOwner__c.object-meta.xml
<CustomObject>
    <label>HP_CaseOwner</label>
    <nameField>
        <label>HP_CaseOwner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HP_CaseOwners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>