force-app/main/default/objects/HP_CaseOwner__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>HP_CaseOwners</relationshipLabel>
    <relationshipName>HP_CaseOwners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>