force-app/main/default/objects/HP_CaseOwner__c/fields/HP_ActualOwner__c.field-meta.xml
<CustomField>
    <fullName>HP_ActualOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP Actual Owner</label>
    <type>Checkbox</type>
</CustomField>