force-app/main/default/objects/HP_CaseOwner__c/fields/HP_ElapsedTime__c.field-meta.xml
<CustomField>
    <fullName>HP_ElapsedTime__c</fullName>
    <label>HP ElapsedTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>