force-app/main/default/objects/HP_CaseOwner__c/fields/HP_LastAssignment__c.field-meta.xml
<CustomField>
    <fullName>HP_LastAssignment__c</fullName>
    <label>HP Last Assignment</label>
    <type>DateTime</type>
</CustomField>