force-app/main/default/objects/HP_CaseOwner__c/fields/HP_RealTimeElapsed__c.field-meta.xml
<CustomField>
    <fullName>HP_RealTimeElapsed__c</fullName>
    <formula>IF(HP_ActualOwner__c, 
    IF(Case__r.IsClosed, 
       HP_ElapsedTime__c + (DATETIMEVALUE(Case__r.ClosedDate) - DATETIMEVALUE(HP_LastAssignment__c))*86400,
       HP_ElapsedTime__c + (DATETIMEVALUE(NOW()) - DATETIMEVALUE(HP_LastAssignment__c))*86400),
    HP_ElapsedTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HP RealTimeElapsed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>