force-app/main/default/objects/HP_CaseOwner__c/fields/HP_TimeElapsedText__c.field-meta.xml
<CustomField>
    <fullName>HP_TimeElapsedText__c</fullName>
    <formula>TEXT(
    FLOOR(
        (HP_RealTimeElapsed__c / 86400)
    )
)
&amp; &apos;j : &apos; &amp;
TEXT(
    MOD(
        FLOOR((HP_RealTimeElapsed__c / 3600)), 24
    )
)
&amp; &apos;h : &apos; &amp;
TEXT(
    MOD(
        FLOOR((HP_RealTimeElapsed__c / 60)), 60
    )
)
&amp; &apos;m : &apos; &amp;
TEXT(
    MOD(
        FLOOR(HP_RealTimeElapsed__c), 60
    )
)
&amp; &apos;s&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée sur rôle</label>
    <type>Text</type>
</CustomField>