force-app/main/default/objects/HP_CaseOwner__c/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <label>Niveau/rôle</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>